overflow fixed

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -4,9 +4,11 @@
     /* top: 100px; */
     width: 100%;
     height: 100%;
+    min-height: fit-content;
 
     display: grid;
     grid-template-columns: 300px auto;
+    grid-template-rows: 100%;
 }
 
 .side-nav-container {
